--- a/src/components/menu/menu.scss
+++ b/src/components/menu/menu.scss
@@ -24,7 +24,7 @@
         list-style: none;
         font-size: 40px;
         font-weight: 300;
-        color: white;
+        color: $altColor;
         width: 60%;
 
         li{
