--- a/src/components/topbar/topbar.scss
+++ b/src/components/topbar/topbar.scss
@@ -3,7 +3,7 @@
 .topbar{
     width: 100%;
     height: 70px;
-    background-color: white;
+    background-color: $altColor;
     color: $mainColor;
     position: fixed;
     top: 0;
@@ -68,19 +68,19 @@
 
   &.active{
     background-color: $mainColor;
-    color: white;
+    color: $altColor;
 
     .hamburger{
         span{
             &:first-child{
-                background-color: white;
+                background-color: $altColor;
                 transform: rotate(45deg);
             }
             &:nth-child(2){
                 opacity: 0;
             }
             &:last-child{
-                background-color: white;
+                background-color: $altColor;
                 transform: rotate(-45deg);
             }
         }
